[package]
name = "redis-module"
version = "99.99.99"
authors = ["Gavrie Philipson <gavrie@redis.com>", "Guy Korland <guy.korland@redis.com>"]
edition = "2021"
build = "build.rs"
description = "A toolkit for building Redis modules in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/RedisLabsModules/redismodule-rs"
readme = "README.md"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "keys_pos"
crate-type = ["cdylib"]

[[example]]
name = "lists"
crate-type = ["cdylib"]

[[example]]
name = "timer"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "threads"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "block"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "data_type"
crate-type = ["cdylib"]

[[example]]
name = "load_unload"
crate-type = ["cdylib"]

[[example]]
name = "events"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "test_helper"
crate-type = ["cdylib"]
required-features = ["test","experimental-api"]

[[example]]
name = "info"
crate-type = ["cdylib"]
required-features = []

[dependencies]
bitflags = "1.2"
libc = "0.2"
enum-primitive-derive = "^0.2"
num-traits = "^0.2"
regex = "1"
strum_macros = "0.24"
#failure = "0.1"
backtrace = "0.3"

[dev-dependencies]
anyhow = "1.0.38"
redis = "0.21.0"

[build-dependencies]
bindgen = "0.60"
cc = "1.0"

[features]
default = []
experimental-api = []

# Workaround to allow cfg(feature = "test") in dependencies:
# https://github.com/rust-lang/rust/issues/59168#issuecomment-472653680
# This requires running the tests with `--features test`
test = []
