[package]
name = "redis-module"
version = "99.99.99"
authors = ["Gavrie Philipson <gavrie@redis.com>", "Guy Korland <guy.korland@redis.com>"]
edition = "2021"
build = "build.rs"
description = "A toolkit for building Redis modules in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/RedisLabsModules/redismodule-rs"
readme = "README.md"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "string"
crate-type = ["cdylib"]

[[example]]
name = "configuration"
crate-type = ["cdylib"]

[[example]]
name = "acl"
crate-type = ["cdylib"]

[[example]]
name = "call"
crate-type = ["cdylib"]

[[example]]
name = "keys_pos"
crate-type = ["cdylib"]

[[example]]
name = "lists"
crate-type = ["cdylib"]

[[example]]
name = "timer"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "threads"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "block"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "data_type"
crate-type = ["cdylib"]

[[example]]
name = "load_unload"
crate-type = ["cdylib"]

[[example]]
name = "ctx_flags"
crate-type = ["cdylib"]

[[example]]
name = "server_events"
crate-type = ["cdylib"]

[[example]]
name = "events"
crate-type = ["cdylib"]
required-features = ["experimental-api"]

[[example]]
name = "test_helper"
crate-type = ["cdylib"]
required-features = ["test","experimental-api"]

[[example]]
name = "info"
crate-type = ["cdylib"]
required-features = []

[[example]]
name = "scan_keys"
crate-type = ["cdylib"]

[[example]]
name = "stream"
crate-type = ["cdylib"]

[[example]]
name = "response"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.1"
libc = "0.2"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
regex = "1"
strum_macros = "0.24"
#failure = "0.1"
backtrace = "0.3"
linkme = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.38"
redis = "0.22.1"
lazy_static = "1.4.0"
redis-module-derive = { path = "./redismodule-rs-derive"}
redis-module = { path = "./", features = ["test", "experimental-api"]}

[build-dependencies]
bindgen = "0.64"
cc = "1.0"

[features]
default = ["experimental-api"]
experimental-api = []

# Workaround to allow cfg(feature = "test") in dependencies:
# https://github.com/rust-lang/rust/issues/59168#issuecomment-472653680
# This requires running the tests with `--features test`
test = []
