[package]
name = "redis_module_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0", features = ["full"]}
quote = "1.0"

[lib]
name = "redis_module_derive"
path = "src/lib.rs"
proc-macro = true