[package]
name = "redis-module-derive"
version = "99.99.99"
authors = ["Meir Shpilraien <meir@redis.com>"]
edition = "2021"
description = "A derive crate for redismodule-rs"
license = "BSD-3-Clause"
repository = "https://github.com/RedisLabsModules/redismodule-rs"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0", features = ["full"]}
quote = "1.0"

[lib]
name = "redis_module_derive"
path = "src/lib.rs"
proc-macro = true
