[package]
name = "redis-module-macros-internals"
authors = ["Meir Shpilraien <meir@redis.com>"]
description = "A macros crate for redismodule-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/RedisLabsModules/redismodule-rs"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1", features = ["full", "extra-traits"]}
quote = "1"
lazy_static = "1"
proc-macro2 = "1"

[lib]
name = "redis_module_macros_internals"
path = "src/lib.rs"
proc-macro = true
