[package]
name = "redis-module-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Meir Shpilraien <meir@redis.com>"]
description = "A macros crate for redismodule-rs"
repository = "https://github.com/RedisLabsModules/redismodule-rs"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_syn = "0.1.0"

[lib]
proc-macro = true
