[package]
name = "redis-module-macros"
version = "99.99.99"
authors = ["Meir Shpilraien <meir@redis.com>"]
edition = "2021"
description = "A macros crate for redismodule-rs"
license = "BSD-3-Clause"
repository = "https://github.com/RedisLabsModules/redismodule-rs"
keywords = ["redis", "plugin"]
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_syn = "0.1.0"
common = { path = "../common" }

[lib]
name = "redis_module_macros"
path = "src/lib.rs"
proc-macro = true
